# pwdkek

./: .gitignore  CMakeLists.txt  README.md  encode.cpp  encode.py  estimator.cpp  estimator.py  password_entropy.py  prepare_dataset.py  script.py  test.py  test_passwords.json
.github/workflows/: ci.yml  ruff-lint.yml  test.yml
datasets/: rockyou-utf8-sorted.txt
pwdkek-cpp/: CMakeLists.txt  estimator.cpp  estimator.h  example.cpp
pwdkek-python/: README.md  __main__.py  pyproject.toml
pwdkek-python/pwdkek_python/: __init__.py  __main__.py  builtin_datasets.py  complexity_estimator.py  prepare_dataset.py
pwdkek-python/tests/: test.py
pwdkek-python/tests/test_files/: test_passwords.json
source/: MyBlueprintFunctionLibrary.cpp  MyBlueprintFunctionLibrary.h  PasswordComplexityEstimator.cpp  PasswordComplexityEstimator.h  PasswordHeroes.Build.cs  PasswordHeroes.cpp
