[tool.poetry]
name = "pwdkek-python"
version = "0.1.0"
description = ""
authors = [
    "Vitaly Mahonin",
    "Evgenij Ivankin",
    "Vladislav Kolpachev",
    "Nikolay Kurichev"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
